--- a/recyclerviewdemo/src/main/res/layout/item_recyclerview.xml
+++ b/recyclerviewdemo/src/main/res/layout/item_recyclerview.xml
@@ -7,6 +7,8 @@
         android:id="@+id/item_tv"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:gravity="center"
         android:layout_centerInParent="true" />
 
