添加CardView的实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,10 @@
         android:layout_height="wrap_content"
         android:text="@string/recycler_view" />
 
+    <Button
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/recycler_view" />
+
 </LinearLayout>
